// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/Shapes/ShapePreview arrow 1`] = `
<div
  className="canvasShapePreview"
>
  <svg
    fill="none"
    stroke="black"
    viewBox="-2.5 -2.5 105 105"
    xmlns="http://www.w3.org/2000/svg"
  >
    <polygon
      points="0,40 60,40 60,20 95,50 60,80 60,60 0,60"
    />
  </svg>
</div>
`;

exports[`Storyshots components/Shapes/ShapePreview square 1`] = `
<div
  className="canvasShapePreview"
>
  <svg
    fill="none"
    stroke="black"
    viewBox="-2.5 -2.5 105 105"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      height="100"
      width="100"
      x="0"
      y="0"
    />
  </svg>
</div>
`;
